Fix Nginx config for Cloud Run

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,11 +3,16 @@ steps:
     args: ['builds', 'submit', '--tag', 'gcr.io/$PROJECT_ID/my-app']
 
   - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['run', 'deploy', 'my-app',
-           '--image', 'gcr.io/$PROJECT_ID/my-app',
-           '--region', 'asia-south1',
-           '--platform', 'managed',
-           '--allow-unauthenticated']
+    args: [
+      'run', 'deploy', 'my-app',
+      '--image', 'gcr.io/$PROJECT_ID/my-app',
+      '--region', 'asia-south1',
+      '--platform', 'managed',
+      '--allow-unauthenticated'
+    ]
 
 images:
   - 'gcr.io/$PROJECT_ID/my-app'
+
+options:
+  default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
