--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,18 @@
 steps:
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['builds', 'submit', '--tag', 'gcr.io/$PROJECT_ID/my-app']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app', '.']
 
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: [
-      'run', 'deploy', 'my-app',
-      '--image', 'gcr.io/$PROJECT_ID/my-app',
-      '--region', 'asia-south1',
-      '--platform', 'managed',
-      '--allow-unauthenticated'
-    ]
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/my-app']
 
+  - name: 'gcr.io/cloud-builders/gke-deploy'
+    args:
+      [
+        'apply',
+        '--filename=k8s/',
+        '--cluster=my-gke-cluster',
+        '--location=asia-south1',
+      ]
 images:
   - 'gcr.io/$PROJECT_ID/my-app'
 
