--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-nginx-deployment
+  name: my-app
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: my-nginx
+      app: my-app
   template:
     metadata:
       labels:
-        app: my-nginx
+        app: my-app
     spec:
       containers:
-        - name: my-nginx
-          image: gcr.io/$PROJECT_ID/my-app
-          ports:
-            - containerPort: 8080
+      - name: my-app
+        image: gcr.io/ci-cd-project-476413/my-app:latest
+        ports:
+        - containerPort: 8080
