--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-nginx-service
+  name: my-app-service
 spec:
   type: LoadBalancer
   selector:
-    app: my-nginx
+    app: my-app
   ports:
-    - port: 80        # external port
-      targetPort: 8080  # container port
+    - port: 80
+      targetPort: 8080
