--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
+  # Step 1: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app', '.']
 
+  # Step 2: Push the image to GCR
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/my-app']
 
+  # Step 3: Deploy to GKE
   - name: 'gcr.io/cloud-builders/gke-deploy'
     args:
       [
@@ -13,8 +16,8 @@ steps:
         '--cluster=my-gke-cluster',
         '--location=asia-south1',
       ]
+
 images:
   - 'gcr.io/$PROJECT_ID/my-app'
-
 options:
   default_logs_bucket_behavior: REGIONAL_USER_OWNED_BUCKET
