--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,12 +3,13 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:latest', '.']
 
-  # Step 2: Push Docker image to Artifact Registry / Container Registry
+  # Step 2: Push Docker image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/my-app:latest']
 
   # Step 3: Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'gcloud'
     args:
       [
         'run', 'deploy', 'my-app',
@@ -17,7 +18,7 @@ steps:
         '--allow-unauthenticated'
       ]
 
-  # Step 4: Connect to your GKE cluster
+  # Step 4: Connect to GKE cluster
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
@@ -25,7 +26,7 @@ steps:
       - |
         gcloud container clusters get-credentials my-gke-cluster --region asia-south1 --project $PROJECT_ID
 
-  # Step 5: Update GKE deployment with the new image
+  # Step 5: Update GKE deployment with new image
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
