--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,13 @@
 steps:
   # Step 1: Build Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:latest', '.']
+    args:
+      ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:latest', '.']
 
-  # Step 2: Push Docker image to Container Registry
+  # Step 2: Push Docker image to Container Registry (GCR)
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/my-app:latest']
+    args:
+      ['push', 'gcr.io/$PROJECT_ID/my-app:latest']
 
   # Step 3: Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -24,16 +26,29 @@ steps:
     args:
       - '-c'
       - |
+        echo "🔗 Connecting to GKE cluster..."
         gcloud container clusters get-credentials my-gke-cluster --region asia-south1 --project $PROJECT_ID
 
-  # Step 5: Update GKE deployment with new image
+  # Step 5: Apply GKE Deployment and Service (if not already deployed)
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        kubectl set image deployment/my-app-deployment my-app-container=gcr.io/$PROJECT_ID/my-app:latest
-        kubectl rollout status deployment/my-app-deployment
+        echo "🚀 Applying Kubernetes deployment..."
+        kubectl apply -f k8s/deployment.yaml || true
+        kubectl apply -f k8s/service.yaml || true
+
+  # Step 6: Update GKE Deployment image and verify rollout
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        echo "🔄 Updating deployment image in GKE..."
+        kubectl set image deployment/my-app my-app=gcr.io/$PROJECT_ID/my-app:latest
+        echo "⏳ Waiting for rollout to complete..."
+        kubectl rollout status deployment/my-app
 
 images:
   - 'gcr.io/$PROJECT_ID/my-app:latest'
