--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@ steps:
     args:
       ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:latest', '.']
 
-  # Step 2: Push Docker image to Container Registry (GCR)
+  # Step 2: Push Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       ['push', 'gcr.io/$PROJECT_ID/my-app:latest']
@@ -26,28 +26,28 @@ steps:
     args:
       - '-c'
       - |
-        echo "🔗 Connecting to GKE cluster..."
+        echo "🔗 Connecting to GKE..."
         gcloud container clusters get-credentials my-gke-cluster --region asia-south1 --project $PROJECT_ID
 
-  # Step 5: Apply GKE Deployment and Service (if not already deployed)
+  # Step 5: Apply deployment and service if not already created
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        echo "🚀 Applying Kubernetes deployment..."
+        echo "🧱 Applying manifests (if needed)..."
         kubectl apply -f k8s/deployment.yaml || true
         kubectl apply -f k8s/service.yaml || true
 
-  # Step 6: Update GKE Deployment image and verify rollout
+  # Step 6: Update the image for deployment `my-app`
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
-        echo "🔄 Updating deployment image in GKE..."
+        echo "🚀 Updating deployment image..."
         kubectl set image deployment/my-app my-app=gcr.io/$PROJECT_ID/my-app:latest
-        echo "⏳ Waiting for rollout to complete..."
+        echo "⏳ Waiting for rollout..."
         kubectl rollout status deployment/my-app
 
 images:
