--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,17 @@
 steps:
   # Step 1: Build Docker image with unique tag (commit SHA)
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA', '.']
+    args:
+      - 'build'
+      - '-t'
+      - 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA'
+      - '.'
 
-  # Step 2: Push the tagged image
+  # Step 2: Push the tagged image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA']
+    args:
+      - 'push'
+      - 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA'
 
   # Step 3: Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -24,14 +30,16 @@ steps:
     args:
       - '-c'
       - |
+        echo "🔗 Connecting to GKE..."
         gcloud container clusters get-credentials my-gke-cluster --region asia-south1 --project $PROJECT_ID
 
-  # Step 5: Deploy new image tag to GKE
+  # Step 5: Update GKE Deployment with the new image tag
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
+        echo "🚀 Updating GKE deployment with new image..."
         kubectl set image deployment/my-app my-app=gcr.io/$PROJECT_ID/my-app:$SHORT_SHA
         kubectl rollout status deployment/my-app
 
